--- a/courses.html
+++ b/courses.html
@@ -25,9 +25,9 @@
         <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="#">Courses</a>
+            <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="courses.html">Courses</a>
             </li>
-            <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="#">Contact Us</a>
+            <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="contact-us.html">Contact Us</a>
             </li>
             <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="cart.html">Cart</a>
             </li> 
@@ -39,16 +39,14 @@
       </div>  
     </nav>
   </header>
-
+  
 <!-- Main Section -->
 
 <section class="course-main-section">
-  <div class="container-fluid mt-5">
-    <div class="row" style="height: 40px;">
-    </div>
+  <div class="container-fluid">
     <div class="row">
       <div class="col-sm-3">
-        <div class="carousel slide" data-ride="carousel" id="slider">
+        <div class="carousel slide" data-ride="carousel" id="slider2">
           <div class="carousel-inner">
             <div class="carousel-item active course-carousel">
               <div>
@@ -96,12 +94,18 @@
               </div>     
             </div>
           </div>
+          <div id="course-control">
+            <!-- Controls -->
+            <a href="#slider2" class="carousel-control-next" data-slide="next">
+            <img style="margin-top: 100px; margin-left: 10px;" height="20px" width="40px" src="./images/arrow-left.svg" alt="left-arrow">
+            </a>
+          </div>
         </div>
       </div>
       <div class="col-8 mt-4 ml-5">
         <div class="mb-5">
           <h2 class="all-maven-text">
-            <small>Course Outline</small>
+            <small class="ml-2" id="course-outline">Course Outline</small>
           </h2>
         </div>
         <div class="row ml-1 my-4">
@@ -144,7 +148,7 @@
               <a class="all-maven-text" data-toggle="modal" data-target="#courseModal" href="">Click here to Download the Curriculum </a>
               <div class="modal" id="courseModal">
                 <div class="modal-dialog">
-                  <div class="modal-content" style="width: 800px;">
+                  <div class="modal-content" id="style-modal">
                     <div class="modal-header">
                       <button class="close" data-dismiss="modal"><span id="modal-x-button">&times;</span></button>
                     </div>
@@ -191,88 +195,78 @@
       <div class="container text-center text-md-left">
         <div class="row p-5">
           <div class="col-sm mx-auto ">
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">GENERAL</h5>
-            <br>
+            <h5 class="font-weight-bold text-uppercase text-left mt-3 mb-4 text-primary small all-maven-text">GENERAL</h5>
             <ul class="list-unstyled">
-              <li>
+              <li class="mb-3 text-left">
                 <a class="text-light all-maven-text" href="#!">Home</a>
               </li>
-              <br>
-              <li>
+              <li class="text-left">
                 <a class="text-light all-maven-text" href="#!">Faq</a>
               </li>
             </ul>
           </div>
           <hr class="clearfix w-100 d-md-none">
-          <div class="col-sm mx-auto">
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">WHY US</h5>
-            <br>
+        <div class="col-sm mx-auto">
+          <h5 class="font-weight-bold text-uppercase text-left mt-3 mb-4 text-primary small all-maven-text">WHY US</h5>
             <ul class="list-unstyled">
-              <li>
+              <li class="mb-3 text-left">
                 <a class="text-light all-maven-text" href="#!">Why Study with us?</a>
               </li>
-              <br>
-              <li>
+              <li class="mb-3 text-left">
                 <a class="text-light all-maven-text" href="#!">Financial Aid - Study for Just R1</a>
               </li>
-              <br>
-              <li>
+              <li class="text-left">
                 <a class="text-light all-maven-text" href="#!">Internship - Work, Learn & Earn</a>
               </li>
             </ul>
-          </div>
-          <hr class="clearfix w-100 d-md-none">
+        </div>
+        <hr class="clearfix w-100 d-md-none">
           <div class="col-md-3 mx-auto align-iet">
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">DEVELOPER COURSES</h5>
-            <br>
-            <ul class="list-unstyled">
-              <li>
-                <a class="text-light all-maven-text" href="#!">Full Stack Web Developer</a>
-              </li>
-            </ul>
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-left text-primary small all-maven-text">DEVELOPER COURSES</h5>
+              <ul class="list-unstyled">
+                <li class="text-left">
+                  <a class="text-light all-maven-text" href="#!">Full Stack Web Developer</a>
+                </li>
+              </ul>
           </div>
           <hr class="clearfix w-100 d-md-none">
           <div class="col-md-4 mx-auto">
-            <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">CONTACT US</h5>
-            <br>
+            <h5 class="font-weight-bold text-uppercase mt-3 text-left mb-4 text-primary small all-maven-text">CONTACT US</h5>
             <ul class="list-unstyled">
-              <li>
-                <img class="img-fluid mr-2" src="images/phone-icon.svg" alt="phone-icon"><a class="text-light font-weight-bold all-maven-text" href="+27 21 461 68 17">+27 21 461 68 17</a>
+              <li class="mb-3 text-left">
+                <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold all-maven-text" href="+27 21 461 68 17">+27 21 461 68 17</a>
               </li>
-              <br>
-              <li>
-                <img class="img-fluid mr-2" src="images/email-icon.svg" alt="email-icon"><a class="text-light small all-maven-text" href="#!">hello@themavenacademy.one</a>
+              <li class="mb-3 text-left">
+                <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small all-maven-text" href="#!">hello@themavenacademy.one</a>
               </li>
-              <br>
-              <li>
+              <li class="text-left">
                 <img class="img-fluid mr-2" src="images/location-icon.svg" alt="location-icon"><a class="text-light small p-0 all-maven-text" href="#!">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
               </li>
             </ul>
           </div>
         </div>
       </div>
-    </footer> 
+    </footer> `
   </div>
-  
 </section>
 
 <!-- Footer Section -->
 
 <footer class="footer-section">
-  <nav class="navbar navbar-expand-sm">
-    <div class="col-sm-12 col-md-6 col-lg 6">
-      <ul class="navbar-nav">
-        <li class="nav-items text-light ml-5 small mt-4 footer-copyright all-maven-text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
-      </ul>
-   </div>
-    <div class="col-sm-12 col-md-6 col-lg 6">
-      <div class="social-media-icons pr-5">
+  <nav class="navbar navbar-expand-md navbar-dark navbar-color p-3">
+    <div class="col-sm-12 col-md-6 col-lg-6">
+    <ul class="navbar-nav">
+      <li class="nav-items text-light footer-copyright text-left small mt-4 all-maven-text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
+    </ul>
+  </div>
+    <div class="col-sm-12 col-md-6 col-lg-6">
+      <div class="social-media-icons pr-4">
         <a href="#"><img class="border rounded bg-primary mx-1 social-media-platforms" src="images/facebook.svg" alt="facebook-icon"></a>
         <a href="#"><img class="border rounded bg-primary mx-1 social-media-platforms" src="images/twitter.svg" alt="twitter-icon"></a>
-        <a href="#"><img class="border rounded bg-primary mx-1 social-media-platforms" src="images/instagram.svg" alt="instagram-icon"></a>
+         <a href="#"><img class="border rounded bg-primary mx-1 social-media-platforms" src="images/instagram.svg" alt="instagram-icon"></a>
       </div>
-    </div>
-  </nav>
+    </div> 
+  </nav> 
 </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
