--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </li>
                 <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="courses.html">Courses</a>
                 </li>
-                <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="">Contact Us</a>
+                <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="contact-us.html">Contact Us</a>
                 </li>
                 <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="cart.html">Cart</a>
                 </li>
@@ -44,7 +44,7 @@
 
 <!-- Main Section -->
 
-<section class="main-section">
+<section class="main-section mb-4">
   <div class="container-fluid p-5 mt-5">
     <h1 class="text-center all-maven-text">Next level training in</h1> 
       <h1 id="wordToggle" class="text-center text-primary all-maven-text">User interface design</h1>
@@ -61,13 +61,10 @@
     </div>
   </div>
 </section>
-  <br>
-  <br>
-  <br>
 
 <!-- Main Body Section -->
 
-<section class="main-body-section">
+<section class="main-body-section my-5">
   <div class="container-fluid"> 
     <div class="row">  
       <div class="col-sm-6 p-4 mt-5">
@@ -90,31 +87,28 @@
                   <p class="all-maven-text">Master the art of code by working on projects that reflect the kind of work you will carry out for future employers and clients.
                   </p>  
                 </div>
-              </li>
-          <li class="media">
-            <img class="mr-3 mt-1 p-2 border rounded bg-primary" src="images/career-boosters.svg" alt="career-boosters-icon">
-              <div class="media-body">
-                <h4 class="all-maven-text">Expert coaching</h4>
-                  <p class="all-maven-text">Adopt the best-practice development techniques with on-demand access to mentors bringing their global tech exposure directly to you. Consistent feedback and mentorship refine your skills until you are comfortable producing efficient, production-grade code without hesitation.
-                  </p>
-              </div>
-          </li>
-          <li class="media">
-            <img class="mr-3 mt-1 p-2 border rounded bg-primary" src="images/recent-graduates.svg" alt="recent-graduates-icon">
-              <div class="media-body">
-                <h4 class="all-maven-text">Internship Programme</h4>
-                  <p class="all-maven-text">Don’t struggle with the job hunt! Hit the ground sprinting with our exclusive platform that allows you to Work, Learn, and Earn at the same time.
-                  </p> 
-              </div>
-          </li>
-        </ul>
+            </li>
+            <li class="media">
+              <img class="mr-3 mt-1 p-2 border rounded bg-primary" src="images/career-boosters.svg" alt="career-boosters-icon">
+                <div class="media-body">
+                  <h4 class="all-maven-text">Expert coaching</h4>
+                    <p class="all-maven-text">Adopt the best-practice development techniques with on-demand access to mentors bringing their global tech exposure directly to you. Consistent feedback and mentorship refine your skills until you are comfortable producing efficient, production-grade code without hesitation.
+                    </p>
+                </div>
+            </li>
+            <li class="media">
+              <img class="mr-3 mt-1 p-2 border rounded bg-primary" src="images/recent-graduates.svg" alt="recent-graduates-icon">
+                <div class="media-body">
+                  <h4 class="all-maven-text">Internship Programme</h4>
+                    <p class="all-maven-text">Don’t struggle with the job hunt! Hit the ground sprinting with our exclusive platform that allows you to Work, Learn, and Earn at the same time.
+                    </p> 
+                </div>
+            </li>
+          </ul>
+        </div>
     </div>
   </div>
-</div>
 </section>
-  <br>
-  <br>
-  <br>
 
 <!-- Main course section -->
 
@@ -248,7 +242,6 @@
           <img class="img-fluid" style="color:skyblue;" src="images/arrow-right.svg" alt="right-arrow"> 
         </a>
         </div>
-      
         <div>
         <!-- Controls -->
         <a href="#slide1" class="carousel-control-next" data-slide="next">
@@ -261,20 +254,19 @@
 
 <!-- Bottom Contact Section -->
 
-  <section class="bottom-contact-section">
-    <div class="container-fluid">
-      <div class="d-flex justify-content-center p-2">
-        <img class="img-fluid mt-5" src="images/contact-banner.png" alt="contact-icon">
-      </div>
-        <div class="p-5">
-         <h1 class="text-center all-maven-text">Thank you for your enquiry.</h1>
-           <br>
-            <p class="text-center all-maven-text">One of our friendly course consultants and we’ll get back to you within 24 hours.</p>
-            <p class="text-center all-maven-text">Or call us directly on <a href="#">+27 (0)87 073 5694</a></p>
-          <p class="text-center pb-3 m-0 all-maven-text">Need a quicker answer ? visit out Faq page :<a href="#"> Click here</a></p>
-      </div>
-    </div> 
-  </section>
+<section class="bottom-contact-section mt-3">
+  <div class="container-fluid">
+    <div class="d-flex justify-content-center p-2">
+      <img class="img-fluid mt-5" src="images/contact-banner.png" alt="contact-icon">
+    </div>
+      <div class="p-5">
+       <h1 class="text-center all-maven-text">Thank you for your enquiry.</h1>
+        <p class="text-center all-maven-text">One of our friendly course consultants and we’ll get back to you within 24 hours.</p>
+        <p class="text-center all-maven-text">Or call us directly on <a href="#">+27 (0)87 073 5694</a></p>
+        <p class="text-center pb-3 m-0 all-maven-text">Need a quicker answer ? visit out Faq page :<a href="#"> Click here</a></p>
+    </div>
+  </div> 
+</section>
 
   <!-- Bottom Section -->
 
@@ -284,63 +276,54 @@
         <div class="container text-center text-md-left">
           <div class="row p-5">
             <div class="col-sm mx-auto ">
-              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">GENERAL</h5>
-                <br>
-                  <ul class="list-unstyled">
-                    <li>
-                      <a class="text-light all-maven-text" href="#!">Home</a>
-                    </li>
-                    <br>
-                    <li>
-                      <a class="text-light all-maven-text" href="#!">Faq</a>
-                    </li>
-                  </ul>
-              </div>
+              <h5 class="font-weight-bold text-uppercase text-left mt-3 mb-4 text-primary small all-maven-text">GENERAL</h5>
+              <ul class="list-unstyled">
+                <li class="mb-3 text-left">
+                  <a class="text-light all-maven-text" href="#!">Home</a>
+                </li>
+                <li class="text-left">
+                  <a class="text-light all-maven-text" href="#!">Faq</a>
+                </li>
+              </ul>
+            </div>
             <hr class="clearfix w-100 d-md-none">
           <div class="col-sm mx-auto">
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">WHY US</h5>
-      <br>
-       <ul class="list-unstyled">
-          <li>
-            <a class="text-light all-maven-text" href="#!">Why Study with us?</a>
-            </li>
-              <br>
-                <li>
-                  <a class="text-light all-maven-text" href="#!">Financial Aid - Study for Just R1</a>
-                    </li>
-                      <br>
-                        <li>
-                          <a class="text-light all-maven-text" href="#!">Internship - Work, Learn & Earn</a>
-                         </li>
-                          </ul>
-                            </div>
-                              <hr class="clearfix w-100 d-md-none">
-                                <div class="col-md-3 mx-auto align-iet">
-                                  <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">DEVELOPER COURSES</h5>
-                                  <br>
-                                    <ul class="list-unstyled">
-                                  <li>
-                                <a class="text-light all-maven-text" href="#!">Full Stack Web Developer</a>
-                              </li>
-                            </ul>
-                        </div>
-                      <hr class="clearfix w-100 d-md-none">
-                    <div class="col-md-4 mx-auto">
-                  <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">CONTACT US</h5>
-                <br>
+            <h5 class="font-weight-bold text-uppercase text-left mt-3 mb-4 text-primary small all-maven-text">WHY US</h5>
               <ul class="list-unstyled">
-            <li>
-          <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold all-maven-text" href="+27 21 461 68 17">+27 21 461 68 17</a>
-        </li>
-      <br>
-        <li>
-          <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small all-maven-text" href="#!">hello@themavenacademy.one</a>
-          </li>
-            <br>
-              <li>
-                <img class="img-fluid mr-2" src="images/location-icon.svg" alt="location-icon"><a class="text-light small p-0 all-maven-text" href="#!">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
+                <li class="mb-3 text-left">
+                  <a class="text-light all-maven-text" href="#!">Why Study with us?</a>
+                </li>
+                <li class="mb-3 text-left">
+                  <a class="text-light all-maven-text" href="#!">Financial Aid - Study for Just R1</a>
+                </li>
+                <li class="text-left">
+                  <a class="text-light all-maven-text" href="#!">Internship - Work, Learn & Earn</a>
+                </li>
+              </ul>
+          </div>
+          <hr class="clearfix w-100 d-md-none">
+            <div class="col-md-3 mx-auto align-iet">
+              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-left text-primary small all-maven-text">DEVELOPER COURSES</h5>
+                <ul class="list-unstyled">
+                  <li class="text-left">
+                    <a class="text-light all-maven-text" href="#!">Full Stack Web Developer</a>
                   </li>
                 </ul>
+            </div>
+            <hr class="clearfix w-100 d-md-none">
+            <div class="col-md-4 mx-auto">
+              <h5 class="font-weight-bold text-uppercase mt-3 text-left mb-4 text-primary small all-maven-text">CONTACT US</h5>
+              <ul class="list-unstyled">
+                <li class="mb-3 text-left">
+                  <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold all-maven-text" href="+27 21 461 68 17">+27 21 461 68 17</a>
+                </li>
+                <li class="mb-3 text-left">
+                  <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small all-maven-text" href="#!">hello@themavenacademy.one</a>
+                </li>
+                <li class="text-left">
+                  <img class="img-fluid mr-2" src="images/location-icon.svg" alt="location-icon"><a class="text-light small p-0 all-maven-text" href="#!">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -354,7 +337,7 @@
     <nav class="navbar navbar-expand-md navbar-dark navbar-color p-3">
       <div class="col-sm-12 col-md-6 col-lg-6">
       <ul class="navbar-nav">
-        <li class="nav-items text-light footer-copyright small mt-4 all-maven-text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
+        <li class="nav-items text-light footer-copyright text-left small mt-4 all-maven-text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
       </ul>
     </div>
       <div class="col-sm-12 col-md-6 col-lg-6">
