--- a/index.html
+++ b/index.html
@@ -17,28 +17,24 @@
 <!-- Nav section -->
 
   <header>
-    <nav class="navbar navbar-expand-md navbar-color navbar-dark fixed-top">
-      <div class="container-fluid"> 
-        <a class="navbar-brand" href="index.html"><img src="images/maven_academy.svg" alt="maven-academy-icon"></a> 
-         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="/index.html">Home</a>
-                </li>
-                <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="courses.html">Courses</a>
-                </li>
-                <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="contact-us.html">Contact Us</a>
-                </li>
-                <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="cart.html">Cart</a>
-                </li>
-                <div class="mainCart">
-                <img id="main-cart-icon" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt="cart-icon"><span class="text-light">0</span>
-                </div>
-            </ul>
-          </div>
-      </div>   
+    <nav class="navbar navbar-expand-lg fixed-top nav-menu navbar-color">
+      <a class="navbar-brand" href="index.html"><img src="images/maven_academy.svg" alt="maven-academy-icon"></a>
+      <button class="navbar-toggler nav-button" type="button" data-toggle="collapse" data-target="#myNavbar">
+        <div class="bg-light line1"></div>
+        <div class="bg-light line2"></div>
+        <div class="bg-light line3"></div>
+      </button>  
+        <div class="collapse navbar-collapse justify-content-end text-uppercase font-weight-bold" id="myNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item m-auto"><a href="/index.html" class="nav-link m-2 menu-item all-maven-text nav-active">Home</a></li>
+            <li class="nav-item m-auto"><a href="courses.html" class="nav-link m-2 menu-item all-maven-text">Courses</a></li>
+            <li class="nav-item m-auto"><a href="contact-us.html" class="nav-link m-2 menu-item all-maven-text">Contact Us</a></li>
+            <li class="nav-item m-auto"><a href="cart.html" class="nav-link m-2 menu-item all-maven-text">Cart</a></li>
+            <div class="mainCart">
+              <img id="main-cart-icon" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt="cart-icon"><span class="text-light">0</span>
+              </div>
+          </ul>
+        </div>
     </nav>
   </header>
 
@@ -49,7 +45,7 @@
     <h1 class="text-center all-maven-text">Next level training in</h1> 
       <h1 id="wordToggle" class="text-center text-primary all-maven-text">User interface design</h1>
         <div class="d-flex justify-content-center">
-          <img class="img-fluid" src="images/tech-mavens.png" alt="maven-tech-icon" width="430px" height="350px">
+          <img class="img-fluid" src="images/tech-mavens.png" alt="maven-tech-icon" width="600px" height="500px">
         </div>
       <div class="text-center mb-3 all-maven-text">
         Take your tech career to the next level with our immersive software development programmes 
